Fixed carousel links not working on mobile

--- a/src/Components/styles/ReelController.css
+++ b/src/Components/styles/ReelController.css
@@ -129,6 +129,8 @@
         transform: none;
 
         background-color: transparent;
+
+        pointer-events: none;
     }
 
     .reel-controller * {
